force-app/main/default/objects/Connectbill__c/Connectbill__c.object-meta.xml
<CustomObject>
    <label>Connect Bill</label>
    <nameField>
        <displayFormat>BILLPR-{000000000}</displayFormat>
        <label>Connector ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connect Bill</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>