force-app/main/default/objects/Connectbill__c/fields/Billingid__c.field-meta.xml
<CustomField>
    <fullName>Billingid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing ID</label>
    <referenceTo>ConsolBill__c</referenceTo>
    <relationshipLabel>Connect Bill</relationshipLabel>
    <relationshipName>Connect_Bill</relationshipName>
    <type>Lookup</type>
</CustomField>