force-app/main/default/objects/Connectbill__c/fields/Invoice_Original_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Original_Amount_USD__c</fullName>
    <formula>Billingid__r.Total_Selling_Incl_Tax_FCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Original Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>