force-app/main/default/objects/Connectbill__c/fields/Invoice_Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Original_Currency__c</fullName>
    <formula>text( Billingid__r.CurrencySelling__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Selling Currency in Billing Record</inlineHelpText>
    <label>Invoice Original Currency</label>
    <type>Text</type>
</CustomField>