force-app/main/default/objects/Connectbill__c/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <formula>Billingid__r.ConsolidationShipmentName__r.FileNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job ID</label>
    <type>Text</type>
</CustomField>