force-app/main/default/objects/Connectbill__c/fields/Payment_Original_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Payment_Original_Amount_USD__c</fullName>
    <formula>Billingid__r.TotalBuyingInclTaxFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Original Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>