force-app/main/default/objects/Connectbill__c/fields/Payment_Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Original_Currency__c</fullName>
    <formula>text(Billingid__r.CurrencyBuying__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Buying Currency in Billing Record</inlineHelpText>
    <label>Payment Original Currency</label>
    <type>Text</type>
</CustomField>