force-app/main/default/objects/Connectbill__c/fields/Payment_Request_Currency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request_Currency__c</fullName>
    <formula>text(Payment_Request__r.Payment_Currency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Request Currency</label>
    <type>Text</type>
</CustomField>