force-app/main/default/objects/Connectbill__c/fields/PaymentOriginalAmountVND__c.field-meta.xml
<CustomField>
    <fullName>PaymentOriginalAmountVND__c</fullName>
    <formula>Billingid__r.TotalBuyingInclTaxLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Original Amount (VNĐ)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>