force-app/main/default/objects/Connectbill__c/fields/Request_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Request_Payment_Amount__c</fullName>
    <label>Request Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>