force-app/main/default/objects/Connectbill__c/fields/Requested_Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Deduction_Amount__c</fullName>
    <label>Requested Deduction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>