force-app/main/default/objects/Connectbill__c/fields/Rollup_Requested_Amount_to_Billing__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Requested_Amount_to_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rollup Requested Amount to Billing</label>
    <referenceTo>Rollup_Requested_Amount_to_Billing__c</referenceTo>
    <relationshipLabel>Connect Bill</relationshipLabel>
    <relationshipName>Connect_Bill</relationshipName>
    <type>Lookup</type>
</CustomField>