force-app/main/default/objects/Connectbill__c/fields/Total_Paid_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_USD__c</fullName>
    <label>Total Paid USD</label>
    <summarizedField>Payment_Allocation__c.Amount_USD__c</summarizedField>
    <summaryForeignKey>Payment_Allocation__c.AllocatetoPR__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>