force-app/main/default/objects/Connectbill__c/fields/Total_Paid_VND__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_VND__c</fullName>
    <label>Total Paid VND</label>
    <summarizedField>Payment_Allocation__c.Amountvnd__c</summarizedField>
    <summaryForeignKey>Payment_Allocation__c.AllocatetoPR__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>