force-app/main/default/objects/Connectbill__c/fields/Unpaid_Balance__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Balance__c</fullName>
    <formula>if(Payment_Request_Currency__c =&quot;VND&quot;, Request_Payment_Amount__c - Total_Paid_VND__c , Request_Payment_Amount__c-Total_Paid_USD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>