force-app/main/default/objects/Connectbill__c/recordTypes/Connect_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Connect_Invoice</fullName>
    <active>true</active>
    <label>Connect Invoice</label>
</RecordType>