force-app/main/default/objects/Connectbill__c/recordTypes/Connect_Payment.recordType-meta.xml
<RecordType>
    <fullName>Connect_Payment</fullName>
    <active>true</active>
    <label>Connect Payment</label>
</RecordType>